Chastity additions, adjustments and fixes

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -66,7 +66,11 @@ DolSettingsExport = {
 			"movement":true,
 			"top":false,
 			"markers":false
-		}
+		},
+        skinColor:{
+            tanImgEnabled: {boolLetter:true},
+            tanningEnabled: {bool:true},
+        }
 	},
 	"npc":{ 
 
