--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -1,6 +1,5 @@
 //Variables that are missing, not expected or invalid will be ignored
 //"starting" values will only import when on the start screen
-//npc is a place holder object
 DolSettingsExport = {
 	"starting":{
 		"player":{
@@ -14,8 +13,8 @@ DolSettingsExport = {
 		"penissize":0,
 		"breastsize":0,
 		"bottomsize":0,
-		"breastsensitivity":5,
-		"genitalsensitivity":5,
+		"breastsensitivity":3,
+		"genitalsensitivity":3,
 		"eyeselect":"purple",
 		"hairselect":"red",
 		"hairlength":200,
@@ -47,6 +46,7 @@ DolSettingsExport = {
 		"analpregdisable":"f",
 		"watersportsdisable":"f",
 		"spiderdisable":"f",
+        "bodywritingdisable":"f",
 		"breastsizemax":12,
 		"bottomsizemax":8,
 		"penissizemax":4,
@@ -62,6 +62,10 @@ DolSettingsExport = {
 		"confirmSave":false,
 		"confirmLoad":false,
 		"confirmDelete":false,
+        "imgLighten":false,
+        "sidebarStats":"Disabled",
+        "combatControls":"radio",
+        "reducedLineHeight":true
 		"map":{
 			"movement":true,
 			"top":false,
@@ -73,6 +77,30 @@ DolSettingsExport = {
 		}
 	},
 	"npc":{
-
+        "Avery":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Bailey":{pronoun:"m", gender:"m", penissize:1, breastsize:0},
+        "Briar":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Charlie":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Darryl":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Doren":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Eden":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Gwylan":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Harper":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Jordan":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Kylar":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Landry":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Leighton":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Mason":{pronoun:"m", gender:"m", penissize:2, breastsize:0},
+        "Morgan":{pronoun:"m", gender:"m", penissize:1, breastsize:5},
+        "River":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Robin":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Sam":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Sirris":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
+        "Whitney":{pronoun:"m", gender:"m", penissize:1, breastsize:2},
+        "Winter":{pronoun:"m", gender:"m", penissize:2, breastsize:0},
+        "Black Wolf":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Niki":{pronoun:"m", gender:"m", penissize:2, breastsize:0},
+        "Quinn":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
 	}
 }
+
