Save Menu Changes and added missing `<<exhibitionismX>>` to event
- Added highlighting for save times for when saves were made in under 30 minutes
- Adjusted saveId/name highlighting so that it only occurs when they match the current game
- Minor fix for `saveId` that effects the highlighting, this can be corrected by loading the save and re-saving

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -65,42 +65,42 @@ DolSettingsExport = {
         "imgLighten":false,
         "sidebarStats":"Disabled",
         "combatControls":"radio",
-        "reducedLineHeight":true
+        "reducedLineHeight":true,
 		"map":{
 			"movement":true,
 			"top":false,
 			"markers":false
 		},
-		skinColor:{
-			tanImgEnabled: {boolLetter:true},
-			tanningEnabled: {bool:true},
+		"skinColor":{
+			"tanImgEnabled": true,
+			"tanningEnabled": true,
 		}
 	},
 	"npc":{
-        "Avery":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Bailey":{pronoun:"m", gender:"m", penissize:1, breastsize:0},
-        "Briar":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Charlie":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Darryl":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Doren":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Eden":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Gwylan":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Harper":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Jordan":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Kylar":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Landry":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Leighton":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Mason":{pronoun:"m", gender:"m", penissize:2, breastsize:0},
-        "Morgan":{pronoun:"m", gender:"m", penissize:1, breastsize:5},
-        "River":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Robin":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Sam":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Sirris":{pronoun:"m", gender:"m", penissize:3, breastsize:0},
-        "Whitney":{pronoun:"m", gender:"m", penissize:1, breastsize:2},
-        "Winter":{pronoun:"m", gender:"m", penissize:2, breastsize:0},
-        "Black Wolf":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
-        "Niki":{pronoun:"m", gender:"m", penissize:2, breastsize:0},
-        "Quinn":{pronoun:"m", gender:"m", penissize:4, breastsize:0},
+        "Avery":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Bailey":{"pronoun":"m", "gender":"m", "penissize":1, "breastsize":0},
+        "Briar":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Charlie":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Darryl":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Doren":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Eden":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Gwylan":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Harper":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Jordan":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Kylar":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Landry":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Leighton":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Mason":{"pronoun":"m", "gender":"m", "penissize":2, "breastsize":0},
+        "Morgan":{"pronoun":"m", "gender":"m", "penissize":1, "breastsize":5},
+        "River":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Robin":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Sam":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Sirris":{"pronoun":"m", "gender":"m", "penissize":3, "breastsize":0},
+        "Whitney":{"pronoun":"m", "gender":"m", "penissize":1, "breastsize":2},
+        "Winter":{"pronoun":"m", "gender":"m", "penissize":2, "breastsize":0},
+        "Black Wolf":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
+        "Niki":{"pronoun":"m", "gender":"m", "penissize":2, "breastsize":0},
+        "Quinn":{"pronoun":"m", "gender":"m", "penissize":4, "breastsize":0},
 	}
 }
 
