Fix for `npm ci` not working correctly
`install` is a reserved script name, and will be run automatically
as part of `npm ci`, which is *not* what we want.

--- a/cordova-app/package.json
+++ b/cordova-app/package.json
@@ -9,11 +9,11 @@
     "pre:create-vd": "sdkmanager 'system-images;android-24;google_apis;x86'",
     "create-vd": "avdmanager create avd -n 'dol-android' -k 'system-images;android-24;google_apis;x86' -d 'Pixel 2'",
 
-    "build": "cordova build --buildConfig build.json --debug",
+    "build-debug": "cordova build --buildConfig build.json --debug",
     "build-release": "read -s -p 'Please enter the password:' password && cordova build --buildConfig build.json --release -- --storePassword=$password --password=$password",
 
     "//": "NOTE: install script (while run using npm) does not work in some situations, not sure why",
-    "install": "adb install platforms/android/app/build/outputs/apk/debug/app-debug.apk",
+    "install-debug": "adb install platforms/android/app/build/outputs/apk/debug/app-debug.apk",
     "install-release": "adb install platforms/android/app/build/outputs/apk/release/app-release.apk",
     "uninstall": "adb uninstall com.degrees.of.lewdity.AppEntry",
 
