Updated cordova to proper install over old version of the app

--- a/devTools/androidsdk/image/cordova/package.json
+++ b/devTools/androidsdk/image/cordova/package.json
@@ -4,19 +4,8 @@
   "description": "This sub-project exists to build DoL as an Android app",
   "main": "Degrees of Lewdity.html",
   "scripts": {
-    "//": "These script may require additional setup. See docs/android-build.md for more details",
-    "pre:create-vd": "sdkmanager \"system-images;android-24;google_apis;x86\"",
-    "create-vd": "avdmanager create avd -n \"dol-android\" -k \"system-images;android-24;google_apis;x86\" -d \"Pixel 2\"",
-
     "build-debug": "cordova build --debug",
-    "build-release": "node scripts/releaseBuildAskForPassword.js",
-
-    "//": "NOTE: install script (while run using npm) does not work in some situations, not sure why",
-    "install-debug": "adb install -r platforms/android/app/build/outputs/apk/debug/app-debug.apk",
-    "install-release": "adb install -r platforms/android/app/build/outputs/apk/release/app-release.apk",
-    "uninstall": "adb uninstall com.degrees.of.lewdity.AppEntry",
-
-    "genkey-android-public-release": "keytool -genkeypair -v -storetype PKCS12 -keystore ../keys/dol.keystore -alias android-public-release -keyalg RSA -keysize 4096 -dname \"CN=dol team\" -validity 3650"
+    "build-release": "node scripts/releaseBuildAskForPassword.js"
   },
   "repository": {
     "type": "git",
