--- a/devTools/androidsdk/image/cordova/platforms/android/app/src/main/AndroidManifest.xml
+++ b/devTools/androidsdk/image/cordova/platforms/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:hardwareAccelerated="true" android:versionCode="217" android:versionName="0.2.17-dev" package="com.degrees.of.lewdity.AppEntry" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:hardwareAccelerated="true" android:versionCode="217" android:versionName="0.2.17-dev" package="com.vrelnir.DegreesOfLewdity" xmlns:android="http://schemas.android.com/apk/res/android">
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true" android:smallScreens="true" android:xlargeScreens="true" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:hardwareAccelerated="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:supportsRtl="true">
