--- a/devTools/androidsdk/image/cordova/package.json
+++ b/devTools/androidsdk/image/cordova/package.json
@@ -1,11 +1,13 @@
 {
   "name": "degrees-of-lewdity-android-app",
-  "version": "0.2.17-dev",
+  "version": "0.0.1-unset",
   "description": "This sub-project exists to build DoL as an Android app",
   "main": "Degrees of Lewdity.html",
   "scripts": {
-    "build-debug": "cordova build --debug",
-    "build-release": "node scripts/releaseBuildAskForPassword.js"
+    "build-debug-ci": "cordova build --debug",
+    "build-debug": "npm run update-version && cordova build --debug",
+    "build-release": "npm run update-version && node scripts/releaseBuildAskForPassword.js",
+    "update-version": "node scripts/updateVersion.js"
   },
   "repository": {
     "type": "git",
