Added options to settings to disable combat and sidebar CSS animations
- Includes new option to show all tips

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -52,6 +52,8 @@ DolSettingsExport = {
 		"penissizemax":4,
 		"penissizemin":0,
 		"images":1,
+		"sidebarAnimations": true,
+		"combatAnimations": true,
 		"silhouettedisable":"f",
 		"numberify_enabled":1,
 		"timestyle":"military",
