Features: - A new icon for the Gothic Gown. - Added all of the old versions of older clothing to Gwylan's shop, as well as sections in the shop for under outfits and under upper clothing. (Plain panties, lace panties, school swimsuit, briefs, bikini, school shorts, school shirt, sundress, gothic gown.) - Made icons for classic clothing. - Gwylan's shop now uses the clothing shop category icons.
Quality of Life:
- The default option for stripping in locations such as the wolf cave is now blank, rather than saying "don't remove anything".
- The player will no longer be interrupted when changing into swimwear.
- Can now show under clothes in Gwylan's shop.

Bug Fixes:
- Typos.
- Fixed an issue with the alley icon.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ yarn-error.log
 # We use a placeholder to ensure the host system creates the folder 
 #  (may run into permissions issues if you allow docker to create it)
 !/dist/.placeholder
+/debug.log
