Added `Curious Attire` feat and related feat boost
- Removed older `hermaphrodite` feat boost as it was not made use of

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -26,6 +26,8 @@ DolSettingsExport = {
 		"malechance":50,
 		"dgchance":0,
 		"cbchance":0,
+		"malevictimchance ":50,
+		"homochance":4,
 		"breast_mod":0,
 		"penis_mod":0,
 		"whitechance":90,
@@ -34,6 +36,7 @@ DolSettingsExport = {
 		"beastmalechance":50,
 		"monsterchance":20,
 		"monsterhallucinations":"t",
+		"blackwolfmonster": 0,
 		"bestialitydisable":"f",
 		"swarmdisable":"f",
 		"slimedisable":"f",
@@ -50,10 +53,11 @@ DolSettingsExport = {
 		"breastsizemax":12,
 		"bottomsizemax":8,
 		"penissizemax":4,
-		"penissizemin":0,
+		"penissizemin":-1,
 		"images":1,
 		"sidebarAnimations": true,
 		"combatAnimations": true,
+		"bodywritingImages": true,
 		"silhouettedisable":"f",
 		"numberify_enabled":1,
 		"timestyle":"military",
@@ -64,8 +68,9 @@ DolSettingsExport = {
 		"confirmSave":false,
 		"confirmLoad":false,
 		"confirmDelete":false,
-		"imgLighten":false,
+		"imgLighten":"",
 		"sidebarStats":"Disabled",
+		"sidebarTime":"Disabled",
 		"combatControls":"radio",
 		"reducedLineHeight":true,
 		"map":{
