Multiple changes - Improved the display of the preset import confirmation - Added the `$bodysize` variable to make the presets clearer as the previous value was not clear to what it was for - Fix for named npc breast size check prevent it from being automatically being set - Further changes to the preset objects and settings validator

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -9,7 +9,7 @@ DolSettingsExport = {
 			"natural":"light",
 			"range":0
 		},
-		"devlevel":6,
+		"bodysize":2,
 		"penissize":0,
 		"breastsize":0,
 		"bottomsize":0,
