Changes to the setting importer/exporter to replace "t" and "f" with true and false
- Still allows the old values, but, it should make it easier for others to make use of
- Includes an update to the `DolSettingsExport.json` including a minor fix and added the new variables and changes to it.

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -3,7 +3,10 @@
 DolSettingsExport = {
 	"starting":{
 		"player":{
-			"gender":"m"
+			"gender":"m",
+			"gender_body":"f",
+			"ballsExist":true,
+			"freckles":false
 		},
 		"skinColor":{
 			"natural":"light",
@@ -26,7 +29,7 @@ DolSettingsExport = {
 		"malechance":50,
 		"dgchance":0,
 		"cbchance":0,
-		"malevictimchance ":50,
+		"malevictimchance":50,
 		"homochance":4,
 		"breast_mod":0,
 		"penis_mod":0,
@@ -35,21 +38,21 @@ DolSettingsExport = {
 		"alluremod":1,
 		"beastmalechance":50,
 		"monsterchance":20,
-		"monsterhallucinations":"t",
+		"monsterhallucinations":true,
 		"blackwolfmonster": 0,
-		"bestialitydisable":"f",
-		"swarmdisable":"f",
-		"slimedisable":"f",
-		"voredisable":"f",
-		"tentacledisable":"f",
-		"analdisable":"f",
-		"transformdisable":"f",
-		"hirsutedisable":"t",
-		"breastfeedingdisable":"f",
-		"analpregdisable":"f",
-		"watersportsdisable":"f",
-		"spiderdisable":"f",
-		"bodywritingdisable":"f",
+		"bestialitydisable":false,
+		"swarmdisable":false,
+		"slimedisable":false,
+		"voredisable":false,
+		"tentacledisable":false,
+		"analdisable":false,
+		"transformdisable":false,
+		"hirsutedisable":true,
+		"breastfeedingdisable":false,
+		"analpregdisable":false,
+		"watersportsdisable":false,
+		"spiderdisable":false,
+		"bodywritingdisable":false,
 		"breastsizemax":12,
 		"bottomsizemax":8,
 		"penissizemax":4,
@@ -58,12 +61,12 @@ DolSettingsExport = {
 		"sidebarAnimations": true,
 		"combatAnimations": true,
 		"bodywritingImages": true,
-		"silhouettedisable":"f",
+		"silhouettedisable":false,
 		"numberify_enabled":1,
 		"timestyle":"military",
-		"tipdisable":"f",
-		"debugdisable":"t",
-		"cheatdisable":"t",
+		"tipdisable":false,
+		"debugdisable":true,
+		"cheatdisable":true,
 		"showCaptionText":true,
 		"confirmSave":false,
 		"confirmLoad":false,
