Fixed an issue with the settings and tided up the new rent option

--- a/DolSettingsExport.json
+++ b/DolSettingsExport.json
@@ -36,6 +36,11 @@ DolSettingsExport = {
 		"whitechance":90,
 		"blackchance":10,
 		"alluremod":1,
+		"clothesPrice": 1,
+		"clothesPriceUnderwear": 1,
+		"clothesPriceSchool": 1,
+		"clothesPriceLewd": 1,
+		"rentmod": 1,
 		"beastmalechance":50,
 		"monsterchance":20,
 		"monsterhallucinations":true,
