--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 # IDE, temp, generated, and other local-only files
-.idea/
-.vscode
-.project
-.DS_Store
+.*
 *~
 *.iml
 node_modules/
 tweego*
 Degrees of Lewdity*.html
 *.7z
+*.zip
 Zimg/
 gitw
+Desktop.ini
+Thumbs.db
 
-* Ignoring working folder for Quin2k
+# Ignoring working folder for Quin2k
 mod/
 *.code-workspace
 release/
